k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-server-service
spec:
  type: ClusterIP
  selector:
    component: video-server
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: video-server
  template:
    metadata:
      labels:
        component: video-server
    spec:
      containers:
        - name: api
          image: gcr.io/learn-217205/video-api:latest
          ports:
            - containerPort: 5000
