k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-video
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - app.my-video.com
      secretName: my-video-com-tls
  rules:
    - host: app.my-video.com
      http:
       paths:
        - path: /hello
          backend:
            serviceName: video-server-service
            servicePort: 5000
        - path: /upload
          backend:
            serviceName: video-server-service
            servicePort: 5000
        - path: /sessions
          backend:
            serviceName: video-server-service
            servicePort: 5000
        - path: /
          backend:
            serviceName: video-client-service
            servicePort: 3000
